Modify find logic